Add blockcontent to base.html.

--- a/djangopicsproj/pagesapp/templates/pagesapp/base.html
+++ b/djangopicsproj/pagesapp/templates/pagesapp/base.html
@@ -8,7 +8,7 @@
     {% block header_additional %}{% endblock %}
 </head>
 <body>
-
+{% block content %}{% endblock %}
 {% block footer_js %}{% endblock %}
 </body>
 </html>
