--- a/djangopicsproj/pagesapp/templates/pagesapp/base.html
+++ b/djangopicsproj/pagesapp/templates/pagesapp/base.html
@@ -17,8 +17,24 @@
 <body>
 <div class="container">
     <div class="row">
+        <div class="col-12 text-center">
+            <p></p>
+            <ul class="list-inline">
+                {% if request.user.is_authenticated %}
+                    <li class="list-inline-item"><a href="#">Upload Photo</a></li>
+                    <li class="list-inline-item"><a href="{% url 'profileapp:view_profile' username=request.user.username %}">My Profile</a></li>
+                {% endif %}
+                {% if not request.user.is_authenticated and request.path != '/accounts/login/' and request.path != '/accounts/signup/' %}
+                    <li class="list-inline-item"><a href="{% url 'account_login' %}">Login</a></li>
+                {% endif %}
+                {% if request.user.is_authenticated %}
+                    <li class="list-inline-item"><a href="{% url 'account_logout' %}">Logout</a></li>
+                {% endif %}
+            </ul>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-12">
-            <br>
             {% bootstrap_messages %}
         </div>
     </div>
