--- a/djangopicsproj/pagesapp/templates/pagesapp/base.html
+++ b/djangopicsproj/pagesapp/templates/pagesapp/base.html
@@ -21,8 +21,11 @@
             <p></p>
             <ul class="list-inline">
                 {% if request.user.is_authenticated %}
-                    <li class="list-inline-item"><a href="#">Upload Photo</a></li>
-                    <li class="list-inline-item"><a href="{% url 'profileapp:view_profile' username=request.user.username %}">My Profile</a></li>
+                    <li class="list-inline-item"><a href="#" data-toggle="modal" data-target="#upload-photo-modal">Upload
+                        Photo</a></li>
+                    <li class="list-inline-item"><a
+                            href="{% url 'profileapp:view_profile' username=request.user.username %}">My Profile</a>
+                    </li>
                 {% endif %}
                 {% if not request.user.is_authenticated and request.path != '/accounts/login/' and request.path != '/accounts/signup/' %}
                     <li class="list-inline-item"><a href="{% url 'account_login' %}">Login</a></li>
@@ -39,6 +42,7 @@
         </div>
     </div>
 </div>
+{% include 'photosapp/upload_photo_modal.html' %}
 {% block content %}{% endblock %}
 {% block footer_js %}{% endblock %}
 </body>
