--- a/djangopicsproj/pagesapp/templates/pagesapp/base.html
+++ b/djangopicsproj/pagesapp/templates/pagesapp/base.html
@@ -21,6 +21,7 @@
             <p></p>
             <ul class="list-inline">
                 {% if request.user.is_authenticated %}
+                    <li class="list-inline-item"><a href="{% url 'photosapp:photo_feed' %}">Feed</a></li>
                     <li class="list-inline-item"><a href="#" data-toggle="modal" data-target="#upload-photo-modal">Upload
                         Photo</a></li>
                     <li class="list-inline-item"><a
