--- a/djangopicsproj/photosapp/templates/photosapp/photo_feed.html
+++ b/djangopicsproj/photosapp/templates/photosapp/photo_feed.html
@@ -1,3 +1,28 @@
 {% extends 'pagesapp/base.html' %}
 
 {% block page_title %} Django Pics Feed {% endblock %}
+
+{% block content %}
+    <div class="container">
+        {% for photo in photos %}
+            <div class="row align-items-center justify-content-center">
+                <div class="col-xs-12 col-md-6 text-center">
+                    <div style="border: 1px solid #dcdcdc; padding-top: 15px;">
+                        <ul class="list-inline">
+                            <li class="list-inline-item"><img width="50" src="{{ photo.owner.profile.avatar }}" alt="">
+                            </li>
+                            <li class="list-inline-item"><a
+                                    href="{% url 'profileapp:view_profile' username=photo.owner.username %}">{{ photo.owner.username }}</a>
+                            </li>
+                        </ul>
+                        <img width="500" src="{{ photo.photo }}" alt="">
+                        <p></p>
+                        <p>{{ photo.caption }}</p>
+                    </div>
+                </div>
+            </div>
+            <br>
+        {% endfor %}
+
+    </div>
+{% endblock %}
